// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Height > handles % value 1`] = `
{
  "classNames": [
    "_root_4e7a72",
    [
      "_--type-literal_4e7a72",
    ],
  ],
  "variables": {
    "--rs-h-s": "50%",
  },
}
`;

exports[`Styles/Height > handles px value 1`] = `
{
  "classNames": [
    "_root_4e7a72",
    [
      "_--type-literal_4e7a72",
    ],
  ],
  "variables": {
    "--rs-h-s": "50px",
  },
}
`;

exports[`Styles/Height > handles responsive value 1`] = `
{
  "classNames": [
    "_root_4e7a72",
    [
      "_--type-literal_4e7a72",
      "_--type-literal--l_4e7a72",
    ],
  ],
  "variables": {
    "--rs-h-l": "50%",
    "--rs-h-s": "50px",
  },
}
`;

exports[`Styles/Height > handles undefined value 1`] = `{}`;

exports[`Styles/Height > handles unit value 1`] = `
{
  "classNames": [
    "_root_4e7a72",
    [
      "_--type-unit_4e7a72",
    ],
  ],
  "variables": {
    "--rs-h-s": 5,
  },
}
`;
